--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Version: 1.0
 */
 
 img {
-	max-width: 80%;
+	max-width: 60%;
 }
 
 h1 {
@@ -41,23 +41,18 @@ body {
 	font-family: merriweather, serif;
 	font-weight: 400;
 	max-width: 75em;
-	width: 90%;
+	width: 98%;
 	margin-left:auto;
-	margin-right:auto;
 }
 
-section > section {
+section {
+    float: left;
+    clear:both;
 	width: 60%;
-	max-width: 27.8125em;
 	margin-left: auto;
-	margin-right: auto;
 	line-height: 1.5em;
 }
 
-section > section h1 {
-	font-size: 2em;
-    text-align: center;
-}
 
 footer {
 	font-size: .8em;
@@ -65,6 +60,7 @@ footer {
 	margin-top: 2em;
 	padding-top: 2em;
 	padding-bottom: 5em;
+    clear: both;
 }
 
 footer h1 {
@@ -76,4 +72,32 @@ footer h1 {
 
 footer p {
 	line-height: .5;
+}
+
+ul {
+    list-style-type: none;
+    text-align: center;   
+    padding: 10px;
+}
+
+li {
+    display: inline;
+    margin: 10px;
+}
+
+a {
+    text-decoration: none;
+    color: orange;
+}
+
+a:hover {
+    color: black;
+}
+
+.sidebar {
+    float: right;
+    text-align: left;
+    width: 30%;
+    padding-left: 5px;
+    line-height: 3em;
 }
